--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  cursor:
+    url("/cursor.png") 8 8,
+    auto;
+}
+
 body {
   overflow: hidden;
   background: #f9f9f9;
