fix: 画像のurlをほとんど全ていっぱいサーバーに入れてurl化したよ

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 * {
 	cursor:
-		url("https://boyintyoko.github.io/images/icons/cursor.png") 8 8,
+		url("https://boyintyoko.github.io/clock-web/icons/cursor.png") 8 8,
 		auto;
 }
 
